demo: Fix buffer content graph positionning on Firefox through CSS

--- a/demo/full/styles/style.css
+++ b/demo/full/styles/style.css
@@ -1173,7 +1173,7 @@ input:checked + .slider:before {
 }
 
 .canvas-buffer-graph {
-  position: relative;
+  position: absolute;
   top: 0px;
   left: 0px;
   width: 100%;
